--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^6.0.2",
     "mongodb": "^4.3.0",
+    "mongoose": "^6.1.10",
     "mysql2": "^2.3.3",
     "pug": "^3.0.2",
     "sequelize": "^6.12.4"
