--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "mongodb": "^4.3.0",
     "mongoose": "^6.1.10",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.7.2",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "pug": "^3.0.2",
     "sequelize": "^6.12.4"
   }
