--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^6.0.2",
     "express-session": "^1.17.2",
+    "express-validator": "^6.14.0",
     "mongodb": "^4.3.0",
     "mongoose": "^6.1.10",
     "mysql2": "^2.3.3",
