--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "express-validator": "^6.14.0",
     "mongodb": "^4.3.0",
     "mongoose": "^6.1.10",
+    "multer": "^1.4.4",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.7.2",
     "nodemailer-sendgrid-transport": "^0.2.0",
+    "pdfkit": "^0.13.0",
     "pug": "^3.0.2",
     "sequelize": "^6.12.4"
   }
