--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "nodemailer-sendgrid-transport": "^0.2.0",
     "pdfkit": "^0.13.0",
     "pug": "^3.0.2",
-    "sequelize": "^6.12.4"
+    "sequelize": "^6.12.4",
+    "stripe": "^8.203.0"
   }
 }
